перемещение файлов в репозиторий

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Сервис CPC</title>
-  <link rel="icon" type="image/x-icon" href="../src/img/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 </head>
 <body class="global-wrapper">
 <div class="overlay1">
@@ -145,7 +145,7 @@
           </aside>
         </div>
         <div class="down-sectors__sector2">
-          <div class="picture-copy"><img class="pic-down" src="../src/img/Picture_Copy.png" alt="Логотип группы CPC"></div>
+          <div class="picture-copy"><img class="pic-down" src="./img/Picture_Copy.png" alt="Логотип группы CPC"></div>
         </div>
       </div>
     </main>
@@ -160,68 +160,68 @@
         <div class="swiper-wrapper">
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/lenovo.svg" alt="Lenovo">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/lenovo.svg" alt="Lenovo">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/samsung.svg" alt="Samsung">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/samsung.svg" alt="Samsung">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/apple.svg" alt="Apple">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/apple.svg" alt="Apple">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/viewsonic.svg" alt="ViewSonic">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/viewsonic.svg" alt="ViewSonic">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/bosch.svg" alt="Bosch">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/bosch.svg" alt="Bosch">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/hp.svg" alt="HP">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/hp.svg" alt="HP">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/acer.svg" alt="Acer">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/acer.svg" alt="Acer">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/sony.svg" alt="Sony">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/sony.svg" alt="Sony">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/lenovo.svg" alt="Lenovo">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/lenovo.svg" alt="Lenovo">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/samsung.svg" alt="Samsung">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/samsung.svg" alt="Samsung">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="brands__card swiper-slide">
             <a href="#" class="brands__logo">
-              <img class="brands__icon" src="../src/img/brands_logo/apple.svg" alt="Apple">
-              <img class="brands__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="brands__icon" src="./img/brands_logo/apple.svg" alt="Apple">
+              <img class="brands__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
         </div>
@@ -242,67 +242,67 @@
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт ноутбуков</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт планшетов</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт ПК</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт мониторов</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт смартфонов</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт навигаторов</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт смарт-тв</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт видеокарт</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт неттопов</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт консолей</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
           <article class="technics__card swiper-slide">
             <a href="#" class="technics__content">
               <div class="technics__kind">Ремонт смарт-часов</div>
-              <img class="technics__go item-button" src="../src/img/ic/go.svg" alt="Вперед">
+              <img class="technics__go item-button" src="./img/ic/go.svg" alt="Вперед">
             </a>
           </article>
         </div>
