--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     </header>
     <main class="feedback__main">
       <form action="#" class="feedback__form">
-        <input class="feedback__input" type="name" name="name" placeholder="Имя" id="name" required>
-        <input class="feedback__input" type="tel" name="phone" placeholder="Телефон" id="number" maxlength="12" required>
-        <input class="feedback__input" type="email" name="email" placeholder="Электронная почта" id="email" required>
-        <textarea class="feedback__input feedback__textarea" type="message" name="message" placeholder="Сообщение" id="message" required></textarea>
+        <input class="feedback__input" type="name" name="name" placeholder="Имя" required>
+        <input class="feedback__input" type="tel" name="phone" placeholder="Телефон" maxlength="12" required>
+        <input class="feedback__input" type="email" name="email" placeholder="Электронная почта" required>
+        <textarea class="feedback__input feedback__textarea" type="message" name="message" placeholder="Сообщение" required></textarea>
         <p class="feedback__description">
           Нажимая “отправить”, вы даете согласие на <a href="#" class="feedback__link"><span class="link-text">обработку персональных данных</span></a> и соглашаетесь с нашей <a href="#" class="feedback__link"><span class="link-text">политикой конфиденциальности</span></a>
         </p>
@@ -89,7 +89,7 @@
     </header>
     <main class="callback__main">
       <form action="#" class="callback__form">
-        <input class="callback__input" type="tel" name="phone" placeholder="Телефон" id="number" maxlength="12" required>
+        <input class="callback__input" type="tel" name="phone" placeholder="Телефон" maxlength="12" required>
         <p class="callback__description">
           Нажимая “отправить”, вы даете согласие на <a href="#" class="callback__link"><span class="link-text">обработку персональных данных</span></a> и соглашаетесь с нашей <a href="#" class="callback__link"><span class="link-text">политикой конфиденциальности</span></a>
         </p>
