--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </header>
     <section class="feedback__main">
       <form action="#" class="feedback__form">
-        <input class="feedback__input" placeholder="Имя" required>
+        <input class="feedback__input" type="text" placeholder="Имя" required>
         <input class="feedback__input" type="tel" placeholder="Телефон" maxlength="21" required>
         <input class="feedback__input" type="email" placeholder="Электронная почта" required>
         <textarea class="feedback__input feedback__textarea" name="message" placeholder="Сообщение" required></textarea>
