--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 </head>
 <body class="global-wrapper">
-<div class="overlay1">
+<div class="overlaySideContent">
   <div class="side-content">
     <header>
       <nav class="side-content__header">
@@ -55,7 +55,7 @@
     </footer>
   </div>
 </div>
-<div class="overlay2 invisible">
+<div class="overlayFeedback invisible">
   <div class="feedback">
     <header class="feedback__header">
       <button class="feedback__header-button content__button item-close item-button" type="button"></button>
@@ -79,7 +79,7 @@
     </section>
   </div>
 </div>
-<div class="overlay3 invisible">
+<div class="overlayCall invisible">
   <div class="callback">
     <header class="callback__header">
       <button class="callback__header-button content__button item-close item-button" type="button"></button>
@@ -338,7 +338,7 @@
               <div class="prices__columns-time">Срок</div>
               <div class="prices__column3">30 мин</div>
             </div>
-            <button class="prices__order item-button">Заказать<img src="./img/ic/goside.svg" alt="go"></button>
+            <button class="prices__order item-button">Заказать<img class="prices__order-pic"></button>
           </div>
           <div class="prices__card swiper-slide">
             <div class="prices__card-content11">
@@ -352,7 +352,7 @@
             <div class="prices__card-content13">
               <div class="prices__columns-time">Срок</div>
               <div class="prices__column3">30-120 мин</div></div>
-            <button class="prices__order item-button">Заказать<img src="./img/ic/goside.svg" alt="go"></button>
+            <button class="prices__order item-button">Заказать<img class="prices__order-pic"></button>
           </div>
           <div class="prices__card swiper-slide">
             <div class="prices__card-content11">
@@ -367,7 +367,7 @@
               <div class="prices__columns-time">Срок</div>
               <div class="prices__column3">30-120 мин</div>
             </div>
-            <button class="prices__order item-button">Заказать<img src="./img/ic/goside.svg" alt="go"></button>
+            <button class="prices__order item-button">Заказать<img class="prices__order-pic"></button>
           </div>
           <div class="prices__card swiper-slide">
             <div class="prices__card-content11">
@@ -382,7 +382,7 @@
               <div class="prices__columns-time">Срок</div>
               <div class="prices__column3">30-120 мин</div>
             </div>
-            <button class="prices__order item-button">Заказать<img src="./img/ic/goside.svg" alt="go"></button>
+            <button class="prices__order item-button">Заказать<img class="prices__order-pic"></button>
           </div>
           <div class="prices__card swiper-slide">
             <div class="prices__card-content11">
@@ -397,7 +397,7 @@
               <div class="prices__columns-time">Срок</div>
               <div class="prices__column3">30-120 мин</div>
             </div>
-            <button class="prices__order item-button">Заказать<img src="./img/ic/goside.svg" alt="go"></button>
+            <button class="prices__order item-button">Заказать<img class="prices__order-pic"></button>
           </div>
         </div>
         <div class="swiper-pagination3"></div>
