--- a/src/index.html
+++ b/src/index.html
@@ -72,8 +72,7 @@
         <p class="feedback__description">
           Нажимая “отправить”, вы даете согласие на <a href="#" class="feedback__link"><span class="link-text">обработку персональных данных</span></a> и соглашаетесь с нашей <a href="#" class="feedback__link"><span class="link-text">политикой конфиденциальности</span></a>
         </p>
-        <button class="feedback__button item-button" type="submit">Отправить
-          <img src="./img/ic/goside.svg" alt="Go">
+        <button class="feedback__button item-button" type="submit">
         </button>
       </form>
     </section>
@@ -93,8 +92,7 @@
         <p class="callback__description">
           Нажимая “отправить”, вы даете согласие на <a href="#" class="callback__link"><span class="link-text">обработку персональных данных</span></a> и соглашаетесь с нашей <a href="#" class="callback__link"><span class="link-text">политикой конфиденциальности</span></a>
         </p>
-        <button class="callback__button item-button" type="submit">Отправить
-          <img src="./img/ic/goside.svg" alt="Go">
+        <button class="callback__button item-button" type="submit">
         </button>
       </form>
     </section>
@@ -338,7 +336,7 @@
               <div class="prices__columns-time">Срок</div>
               <div class="prices__column3">30 мин</div>
             </div>
-            <button class="prices__order item-button">Заказать<img class="prices__order-pic"></button>
+            <button class="prices__order item-button"></button>
           </div>
           <div class="prices__card swiper-slide">
             <div class="prices__card-content11">
@@ -352,7 +350,7 @@
             <div class="prices__card-content13">
               <div class="prices__columns-time">Срок</div>
               <div class="prices__column3">30-120 мин</div></div>
-            <button class="prices__order item-button">Заказать<img class="prices__order-pic"></button>
+            <button class="prices__order item-button"></button>
           </div>
           <div class="prices__card swiper-slide">
             <div class="prices__card-content11">
@@ -367,7 +365,7 @@
               <div class="prices__columns-time">Срок</div>
               <div class="prices__column3">30-120 мин</div>
             </div>
-            <button class="prices__order item-button">Заказать<img class="prices__order-pic"></button>
+            <button class="prices__order item-button"></button>
           </div>
           <div class="prices__card swiper-slide">
             <div class="prices__card-content11">
@@ -382,7 +380,7 @@
               <div class="prices__columns-time">Срок</div>
               <div class="prices__column3">30-120 мин</div>
             </div>
-            <button class="prices__order item-button">Заказать<img class="prices__order-pic"></button>
+            <button class="prices__order item-button"></button>
           </div>
           <div class="prices__card swiper-slide">
             <div class="prices__card-content11">
@@ -397,7 +395,7 @@
               <div class="prices__columns-time">Срок</div>
               <div class="prices__column3">30-120 мин</div>
             </div>
-            <button class="prices__order item-button">Заказать<img class="prices__order-pic"></button>
+            <button class="prices__order item-button"></button>
           </div>
         </div>
         <div class="swiper-pagination3"></div>
